fix overflow in contact animation

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -291,6 +291,7 @@ div.contact-container {
   padding: 20px;
   border: 1px darkgray solid;
   border-radius: 4px;
+  overflow: hidden;
 }
 
 span.map-icon {
